--- a/index.css
+++ b/index.css
@@ -95,42 +95,48 @@ a:hover{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    border-radius: 10px;
 }
 #bl{
     background-image: url(images/Ichigo_Kurosaki.png);
     background-repeat: no-repeat;
     background-size: cover;
+    border-radius: 10px;
 }
 #ns{
     background-image: url(images/Naruto.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    border-radius: 10px;
 }
 #db{
     background-image: url(images/Goko.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    border-radius: 10px;
 }
 #hxh{
     background-image: url(images/Gon.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    border-radius: 10px;
 }
 #aot{
     background-image: url(images/Eren.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    border-radius: 10px;
 }
-img{
+.ti img{
     width: 100%;
     height: 100%;
     border-radius: 10px;
 }
-img:hover{
+.ti img:hover{
     animation: aw 2s linear 0s 1 normal forwards;
 }
 @keyframes aw{
@@ -178,6 +184,10 @@ h3{
     box-shadow: 20px -10px 20px 0px white;
     font-weight: bolder;
 }
+.navi a:hover{
+    border: 1px solid rgb(245, 222, 179);
+    border-radius: 10px;
+}
 .art{
     grid-area: art;
     box-shadow: 20px -10px 20px 0px white;
@@ -211,4 +221,57 @@ iframe{
     grid-area: foo;
     display: flex;
     justify-content: center;
+}
+/* Manga */
+.bot{
+    background-image: linear-gradient(grey,white,black,gray);
+    font-family: 'Pirata One';
+}
+.grid3{
+    display: grid;
+    gap: 30px;
+    grid-template-areas: 
+    'head head head head'
+    'ion ion ion ion'
+    'le le le out'
+    'on on on on'
+    'down down down down';
+}
+.head{
+    grid-area: head;
+    display: flex;
+    justify-content: center;
+    box-shadow: 20px 13px 20px 20px rgb(221, 211, 211);
+    transform: skewX(20deg);
+    font-size: 25px;
+
+}
+.ion{
+    grid-area: ion;
+    display: flex;
+    justify-content: space-between;
+}
+.ion a{
+    box-shadow: 20px 13px 20px 20px rgb(221, 211, 211);
+}
+.ion a:hover{
+    border: 1px solid black;
+    border-radius: 10px;
+}
+.le{
+    grid-area: le;
+}
+.out{
+    grid-area: out;
+}
+.box-8,.box-9,.box-10,.box-11,.box-12{
+       box-shadow: 20px 13px 20px 20px rgb(221, 211, 211); 
+}
+.on{
+    grid-area: on;
+    display: flex;
+    flex-wrap:wrap ;
+}
+.down{
+    grid-area: down;
 }
