change in the img

--- a/index.css
+++ b/index.css
@@ -196,8 +196,8 @@ li.under{
     .git{
         display: none;
     }
-    #op:hover,#bl:hover,#ns:hover,#db:hover,#hxh:hover,#aot:hover{
-        width: 100vw;
+    #op,#bl,#ns,#db,#hxh,#aot{
+        width:fit-content;
         height: 10%;
     }
 }
