--- a/index.css
+++ b/index.css
@@ -376,6 +376,12 @@ iframe{
     grid-area: down;
     box-shadow: 20px 13px 20px 20px rgb(221, 211, 211);
 }
+.down .end{
+    height: 200px;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+}
 .down button:hover{
     border-radius: 5px;
     box-shadow: 20px 13px 20px 20px rgb(221, 211, 211);
